kubernetes/dagster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dagster
  name: dagster-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: dagster.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dagster-dagit
                port:
                  name: http
